fix: #906 additional style change to remove gap b/t textarea and div of new comment

--- a/webcompat/static/css/development/components/comment.css
+++ b/webcompat/static/css/development/components/comment.css
@@ -86,6 +86,7 @@
 
     /* modifier new comment of existing bug */
     .wc-Comment-wrapper-new {
+      display: block;
       border-bottom: 1px dashed var(--Comment-color);
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
